--- a/contents/unsupervised/02-hierarchy.qmd
+++ b/contents/unsupervised/02-hierarchy.qmd
@@ -208,3 +208,37 @@ $$Pseudo-R^2 =\frac{I_{inter-groupe}}{I_{tot}}$$
 * Statistique de Caliliski-Harabasz (CH):
 
 $$CH = \frac{I_{inter-groupe}/(k-1)}{I_{intra-groupe}/(n-k)}$$
+
+
+* Indice de Dunn: On maxime l'indice suivant:
+
+$$D= \frac{\text{Distance minimale entre 2 groupes}}{\text{Distance maximale dans un groupe}}$$
+
+L’indice de Dunn cherche donc à créer des groupes denses et bien séparés.
+
+* Indice de silhouette
+
+La silhouette de l’observation $i$ mesure la confiance dans le choix du groupe pour l’observation $i$:
+$$S(i) = \frac{b_i-a_i}{max(b_i,a_i)}$$
+où $a_i$ est la distance moyenne entre l’observation $i$ et les autres observations de son groupe et $b_i$ est la distance moyenne entre l’observation $i$ et les observations du groupe le plus proche de $i$. On souhaite maximiser la silhouette moyenne des observations.
+
+* Critère de classification cubique (CCC)
+
+On fait un graphique avec le CCC en ordonnée et le nombre de groupes en abscisse. Pour le nombre de groupes, on ne considère que les partitions de $K=1$ à $K=n/10$.
+Si  $CCC>2$, on est en présence d'une classification de bonne qualité. Si  $0<CCC<2$, on est en présence d'une classification de qualité moyenne. Si $CCC<0$, on est en présence d'une classification de mauvaise qualité. Pour choisir le nombre de classes à retenir, on peut considérer les nombres de classes associés aux fortes hausses du critère CCC entre deux nombres de classes subséquents.
+On considère les pics, atteignant des valeurs du critère supérieures à 2 ou à 3 comme étant de fortes hausses de ce critère.
+
+Il ne faut pas utiliser le critère CCC avec la méthode du plus proche voisin, ou lorsque l'on suspecte que les groupes sont de forme très allongée ou irrégulière.
+Le critères ne fonctionne pas bien quand le nombre d'observations dans certains groupes est inférieur à 10.
+
+* Statistique pseudo-$F$
+
+Statistique presque distribuée selon une loi $F$ lorsque la loi des données pas trop loin de la normale multivariée avec variances égales dans toutes les classes.
+Même si on est loin de la normalité, en pratique cette statistique peut quand-même être informative.
+On cherche des nombres de classes pour lesquels la statistique du pseudo-$F$ se démarque par une grande valeur.
+Sur un graphique de la statistique du pseudo-$F$ en fonction du nombre de classes, ceci se traduit par la recherche de pics.
+Il ne faut pas utiliser la statistique du pseudo-$F$ avec la méthode du plus proche voisin.
+
+* Statistique du pseudo-$t^2$
+
+Statistique presque distribuée selon une loi $t$ lorsque loi des données pas trop loin de la normale multivariée avec des variances égales dans toutes les classes. En pratique, on regarde le graphique de la statistique du pseudo-$t^2$ en fonction du nombre de classes de droite à gauche, on essaie de trouver des valeurs de la statistique qui sont beaucoup plus élevées que la valeur précédente. Supposons que la forte hausse se produit entre $k$ et $k-1$ classes. On choisit $k$ classes dans le partitionnement de nos observations. Il ne faut pas utiliser la statistique du pseudo-$t^2$ avec la méthode du plus proche voisin.
