--- a/index.en.qmd
+++ b/index.en.qmd
@@ -7,4 +7,11 @@ Welcome everyone to the class STT-2200 in Autumn 2025.
 
 You will find on this website every necessary information for the modules, the practicals and the exams. The contents will be updated during the session with the answers to some work. I invite you to skim through the differents modules before classes.
 
-This is [Quarto](https://quarto.org/docs/websites).
+This website has been created with the help of Aurélien Nicosia and Thierry Duchesne notes.
+
+This website a been built using [Quarto](https://quarto.org/docs/websites).
+
+Most of the contents has been translated using [DeepL](https://www.deepl.com/en/translator).
+
+![Data trap ([xkcd:2582](https://xkcd.com/2582/)).](./include/data_trap.png)
+
