--- a/informations/general.qmd
+++ b/informations/general.qmd
@@ -39,15 +39,14 @@ Plage horaire:
 
 ## Coordonnées et disponibilités
 
-Steven Golovkine (Enseignant)
+Enseignant: Steven Golovkine 
 
-VCH-2200
+Local: VCH-2209
 
-[steven.golovkine@mat.ulaval.ca](mailto:steven.golovkine@mat.ulaval.ca)
+E-mail: [steven.golovkine@mat.ulaval.ca](mailto:steven.golovkine@mat.ulaval.ca)
 
-**Disponibilités**
+Disponibilités: Je suis disponible pour vous rencontrer sur rendez-vous par couriel ou sans rendez-vous du lundi au jeudi entre 8h et 10h.
 
-Je suis disponible pour vous rencontrer sur rendez-vous par couriel ou sans rendez-vous du lundi au jeudi entre 8h et 10h.
 
 <p style="font-size:10px; ">L’Université reconnaît le droit à la déconnexion des professeures et professeurs, des personnes chargées de cours et des autres membres du personnel enseignant. Cela signifie que ces personnes ne sont pas tenues de consulter les messages qui leur sont envoyés (courriel, boîte vocale, message dans un forum, etc.) pendant les soirs, fins de semaine, jours fériés et vacances. La personne qui aura envoyé un message durant ces périodes devra donc s’attendre à recevoir une réponse dans un délai raisonnable, calculé à partir de la reprise des heures normales de travail.</p>
 
