--- a/informations/mcq.en.qmd
+++ b/informations/mcq.en.qmd
@@ -2,7 +2,94 @@
 title: "MCQ"
 format: 
   html: default
-  pdf: default
+  pdf:
+    include-in-header:
+      - text: |
+          \usepackage{multirow}
 ---
+
+## Information on the first exam 
+
+The first exam is a multiple-choice question with quantification of uncertainty.  
+
+The use of degrees of certainty enables the student to assess the level of knowledge of the answer given. The scoring system, based on decision theory [@leclercqTASTEApproachGeneral1993], may seem odd but it has been designed in such a way that: 
+
+* telling the truth is the strategy that earns the most points;
+* those who self-assess well earn more points than if we applied a corrective scale taking into account the probabilities of having the correct answer randomly.
+
+
+::: {.content-visible when-format=“html”}
+<table style=“width:100%”>
+  <tr>
+    <th>If you find that your answer has a probability of being correct between...</th>
+    <th>Choose the degree of certainty...</th>
+    <th colspan=2>You'll get the following points for ... answer.</th>
+  </tr>
+  <tr>
+    <th></th>
+    <th></th>
+    <th>correct</th>
+    <th>incorrect</th>
+    </tr>
+  <tr>
+    <td>0\% and 25\%</td>
+    <td>0</td>
+    <td>+13</td>
+    <td>+4</td>
+  </tr>
+  <tr>
+    <td>25\% and 50\%</td>
+    <td>1</td>
+    <td>+16</td>
+    <td>+3</td>
+  </tr>
+  <tr>
+    <td>50\% and 70\%</td>
+    <td>2</td>
+    <td>+17</td>
+    <td>+2</td>
+  </tr>
+  <tr>
+    <td>70% and 85%</td>
+    <td>3</td>
+    <td>+18</td>
+    <td>0</td>
+  </tr>
+  <tr>
+    <td>85% and 95%</td>
+    <td>4</td>
+    <td>+19</td>
+    <td>-6</td>
+  </tr>
+  <tr>
+    <td>95\% and 100\%</td>
+    <td>5</td>
+    <td>+20</td>
+    <td>-10</td>
+  </tr>
+</table>
+::: 
+
+
+::: {.content-visible when-format=“pdf”}
+
+\begin{table}
+  \centering
+  \caption{Points repartition}
+  \label{tab:repart_point}
+  \begin{tabular}{p{5cm}|p{5cm}|p{2.5cm}p{2.5cm}}
+    If you consider that your answer has a probability of being correct between... & Choose the degree of certainty... & \multicolumn{2}{p{5cm}}{You'll get the following points for ... answer} \\
+     & & correct & incorrect \\\
+    0\% and 25\% & 0 & +13 & +4 \\\
+    25\% and 50\% & 1 & +16 & +3 \\\
+    50\% and 70\% & 2 & +17 & +2 \\\
+    70\% and 85\% & 3 & +18 & 0 \\\
+    85\% and 95\% & 4 & +19 & -6 \\\
+    95\% and 100\% & 5 & +20 & -10
+  \end{tabular}
+\end{table}
+::: 
+
+In general, students self-assess realistically, and benefit from degrees of certainty. Their score is better than if it had been calculated solely on the basis of the number of correct answers.
 
 
