--- a/informations/schedule.en.qmd
+++ b/informations/schedule.en.qmd
@@ -5,4 +5,8 @@ format:
   pdf: default
 --- 
 
+The plan is given for information only.
+
+| Week   | Date   | Hour  | Plan  | Evaluations  |
+| -----: | -----: | ----: | :---: | -----------: |
 
