--- a/informations/materials.en.qmd
+++ b/informations/materials.en.qmd
@@ -4,3 +4,39 @@ format:
   html: default
   pdf: default
 ---
+
+This page brings together various useful resources for the course.
+
+
+**The Elements of Statistical Learning: Data Mining, Inference and Prediction**, 2nd Edition
+
+Authors: Trevor Hastie, Robert Tibshirani and Jerome Friedman
+
+Publisher: Springer (New York, 2009)
+
+ISBN: 0-387-84857-0
+
+Link: [authors' website](https://hastie.su.domains/ElemStatLearn/)
+
+
+**An Introduction to Statistical Learning: with application in R**, 2nd Edition
+
+Authors: Gareth James, Daniela Witten, Trevor Hastie and Robert Tibshirani 
+
+Publisher: Springer (New York, 2021)
+
+ISBN: 1-0716-1417-4
+
+Link: [authors' website](https://www.statlearning.com)
+
+
+**An Introduction to Statistical Learning: with application in Python**
+
+Authors: Gareth James, Daniela Witten, Trevor Hastie, Robert Tibshirani and Jonathan Taylor
+
+Publisher: Springer (Switzerland, 2023)
+
+ISBN: 3-031-38746-3
+
+Link: [authors' website](https://www.statlearning.com)
+
